--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint src/**/*.js --max-warnings 5"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
