--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,8 @@
 version: 2.1
 
+orbs:
+  aws-s3: circleci/aws-s3@2.0.0
+
 jobs:
   build:
     docker:
@@ -25,3 +28,11 @@ jobs:
       - run: yarn test
 
       - run: yarn build
+      
+      - aws-s3/sync:
+          from: build
+          to: "s3://userindexsearch/"
+          arguments: |
+            --acl public-read \
+            --cache-control "max-age=86400"
+          overwrite: true
